# skillctl

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  dist-workspace.toml
.claude/: CLAUDE.md
.claude/skills/skillctl-project/: SKILL.md
.claude/skills/skillctl-usage/: SKILL.md
.claude/skills/skills-cli-project/: SKILL.md
.claude/skills/skills-cli-usage/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: attest.yml  ci.yml  release.yml
skills/foo/: SKILL.md
src/: audit.rs  cli.rs  config.rs  context.rs  error.rs  fs_util.rs  git.rs  host.rs  lock.rs  main.rs  path_safety.rs  project_config.rs  prompt.rs  review.rs  sanitize.rs  skill.rs  ui.rs
src/commands/: add.rs  audit.rs  create.rs  detect.rs  diff.rs  init.rs  library.rs  list.rs  mod.rs  propagate.rs  pull.rs  push.rs  remove.rs  shared.rs  tag.rs
