[package]
name = "skills-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool to manage your personal Claude skills library across projects"
license = "MIT"
repository = "https://github.com/umanio-agency/skills-cli"
readme = "README.md"
keywords = ["claude", "skills", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "skills"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
cliclack = "0.5.4"
crossterm = "0.29.0"
directories = "6.0.0"
ignore = "0.4.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["formatting"] }
toml = "1.1.2"
